--- a/StockMarketProject/StockMarketProject.csproj
+++ b/StockMarketProject/StockMarketProject.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="AIFinancialAnalyst.cs" />
+    <Compile Include="Bank.cs" />
     <Compile Include="FinanceDataConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
