--- a/StockMarketProject/StockMarketProject.csproj
+++ b/StockMarketProject/StockMarketProject.csproj
@@ -47,11 +47,11 @@
     <Compile Include="AIFinancialAnalyst.cs" />
     <Compile Include="Bank.cs" />
     <Compile Include="FinanceDataConverter.cs" />
+    <Compile Include="StatisticalEquations.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stock.cs" />
     <Compile Include="StockProperties.cs" />
-    <Compile Include="TransactionLogic.cs" />
     <Compile Include="User.cs" />
     <Compile Include="YahooFinanceStockData.cs" />
   </ItemGroup>
